[project]
name = "brain-tumor-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagshub>=0.6.9",
    "dvc>=3.67.1",
    "ensure==1.0.2",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "gdown>=6.0.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "python-box>=7.4.1",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "types-pyyaml>=6.0.12.20260408",
]
